--- a/index.html
+++ b/index.html
@@ -66,6 +66,6 @@
       <a href="https://github.com/briano1905/typings#typings" target="_blank" tabindex="3">user guide</a>/
       <div id="show-themes"class="button" onClick="showThemeCenter();" tabindex="4">themes</div>
     </div>
-    <script src="main.js"></script>
+    <script src="typing.js"></script>
   </body>
 </html>
